--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,6 @@ server:
 
 logging:
   file:
-    name: gift-certificate.log
+    name: logs/gift-certificate.log
     path: /
 
-#spring:
-#  profiles:
-#    active:
