--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -6,11 +6,15 @@ spring:
     driver-class-name: org.postgresql.Driver
 
   jpa:
-    show-sql: true
     properties:
       hibernate:
         format_sql: true
         dialect: org.hibernate.dialect.PostgreSQL10Dialect
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
+    show-sql: true
+
+  flyway:
+    baseline-on-migrate: true
+    locations: classpath:db/migration/postgresql
 
