--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -5,6 +5,9 @@ spring:
     password: sa
     driver-class-name: org.h2.Driver
 
+  flyway:
+    locations: classpath:db/migration/h2
+
   jpa:
     properties:
       hibernate:
@@ -12,7 +15,7 @@ spring:
         format_sql: true
         dialect: org.hibernate.dialect.H2Dialect
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
 
   h2:
     console:
